# rust-projects

api_call/: Cargo.toml
api_call/src/: main.rs
async-await/: Cargo.toml
async-await/src/: main.rs
auth/: Cargo.toml
auth/src/: main.rs
compress_file/: Introduction-Rust_By_Example.html  compressed_file
csv/: Cargo.toml
csv/src/: main.rs
decompress_file/: Cargo.toml
decompress_file/src/: main.rs
http-get/: Cargo.toml
img-download/: Cargo.toml
img-download/src/: main.rs
json_read/: Cargo.toml
json_read/src/: main.rs
json_write/: Cargo.toml
json_write/src/: main.rs
wasm-game-of-life/: Cargo.toml  LICENSE_MIT
wasm-game-of-life/src/: lib.rs
wasm-game-of-life/tests/: web.rs
wasm-game-of-life/www/: index.js
