[package]
edition = "2021"
name = "async-await"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
error-chain = "0.12.4"
reqwest = {version = "0.10", features = ["blocking", "json"]}
tokio = {version = "0.2.3", features = ["full"]}
